# muzikiii-fx

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BaseEffect.h  ChorusProcessor.cpp  ChorusProcessor.h  CompressorProcessor.cpp  CompressorProcessor.h  DelayProcessor.cpp  DelayProcessor.h  DistortionProcessor.cpp  DistortionProcessor.h  EQProcessor.cpp  EQProcessor.h  EffectChain.cpp  EffectChain.h  ReverbProcessor.cpp  ReverbProcessor.h
Source/Parameters/: ParameterLayout.cpp  ParameterLayout.h
Source/UI/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  EffectChainEditor.cpp  EffectChainEditor.h  EffectSlot.cpp  EffectSlot.h
